--- a/index.html
+++ b/index.html
@@ -167,11 +167,153 @@
     <section class="section">
       <h2 class="title">Elements</h2>
 
+      <!-- Base Button -->
       <section>
         <p class="subtitle">Base Button</p>
+
+        <button class="button button--icon">
+          <img src="./img/icons/dark-download-icon.png" alt="">
+          <span>Base Button</span>
+        </button>
+
+        <div class="editor">
+          <p> 
+            <span class="code--blue">&lta</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lti</span>
+            <span class="code--red">class=</span> 
+            <span class="code--orange">""</span>
+            <span class="code--blue">></span>
+            <span class="code--blue">&lti></span>
+            <span class="code--gray">&nbspBase Button</span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/a></span> 
+          </p>
+        </div>
+      </section>
+
+      <!-- Button Types -->
+      <section>
+        <p class="subtitle">Button Types</p>
+
+        <div class="buttons__container">
+          <button class="button button--primary">Primary</button>
+          <button class="button button--secondary">Secondary</button>
+          <button class="button button--succes">Succes</button>
+          <button class="button button--warning">Warning</button>
+          <button class="button button--danger">Danger</button>
+          <button class="button button--transparent">Transparent</button>
+        </div>
+
+        <div class="editor">
+          <p> 
+            <span class="code--blue">&lta</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button_primary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Primary</span>
+            <span class="code--blue">&lt/a></span> 
+          </p>
+          <p>
+            <span class="code--blue">.&nbsp.&nbsp.</span>
+          </p>
+        </div>
+      </section>
+
+      <!-- Button Styles -->
+      <section>
+        <p class="subtitle">Button Styles</p>
+
+        <div class="buttons__container">
+          <button class="button button--primary">Primary</button>
+          <button class="button button--icon button--primary">
+            <img src="./img/icons/white-download-icon.png" alt="">
+            <span>With Icon</span>
+          </button>
+          <button class="button button--icon button--primary">
+            <img src="./img/icons/white-download-icon.png" alt="">
+          </button>
+        </div>
+
+        <div class="editor">
+          <p>
+            <span class="code--blue">.&nbsp.&nbsp.</span>
+          </p>
+        </div>
+      </section>
+
+      <!-- Button Sizes -->
+      <section>
+        <p class="subtitle">Button Sizes</p>
+
+        <div class="buttons__container">
+          <button class="button button--primary">Primary</button>
+          <button class="button button--primary button--small">Small</button>
+          <button class="button button--primary button--large">Large</button>
+        </div>
+
+        <div class="editor">
+          <p>
+            <span class="code--blue">.&nbsp.&nbsp.</span>
+          </p>
+        </div>
+      </section>
+
+      <!-- Images -->
+      <section>
+        <p class="subtitle">Images</p>
+
+        <div class="images__container">
+          <div class="image">
+            <span>100x100</span>
+          </div>
+          <div class="image image--circle">
+            <span>100x100</span>
+          </div>
+          <div class="image image--shadow">
+            <span>100x100</span>
+          </div>
+          <div class="image image--shadow image--circle">
+            <span>100x100</span>
+          </div>
+        </div>
+
+        <div class="editor">
+          <p> 
+            <span class="code--blue">&ltimg</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"image"</span>
+            <span class="code--red">src=</span>
+            <span class="code--orange">"https://via.placeholder.com/100"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">.&nbsp.&nbsp.</span>
+          </p>
+        </div>
+      </section>
+    </section>
+
+    <section class="section">
+      <h2 class="title">Blocks</h2>
+
+      <section>
+        <p class="subtitle">Banner</p>
+
+        <section class="banner">
+          
+        </section>
       </section>
     </section>
   </main>
-  <button class="button button--primary"></button>
 </body>
 </html>
