--- a/index.html
+++ b/index.html
@@ -178,23 +178,26 @@
 
         <div class="editor">
           <p> 
-            <span class="code--blue">&lta</span>
+            <span class="code--blue">&ltbutton</span>
             <span class="code--red">class=</span>
-            <span class="code--orange">"button"</span>
+            <span class="code--orange">"button button--icon"</span>
             <span class="code--red">href=</span>
             <span class="code--orange">"#"</span>
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lti</span>
-            <span class="code--red">class=</span> 
-            <span class="code--orange">""</span>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--red">src=</span> 
+            <span class="code--orange">"./img/icons/dark-download-icon.png"</span>
             <span class="code--blue">></span>
-            <span class="code--blue">&lti></span>
-            <span class="code--gray">&nbspBase Button</span>
           </p>
           <p>
-            <span class="code--blue">&lt/a></span> 
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>Base Button</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/button></span> 
           </p>
         </div>
       </section>
@@ -205,8 +208,8 @@
 
         <div class="buttons__container">
           <button class="button button--primary">Primary</button>
-          <button class="button button--secondary">Secondary</button>
-          <button class="button button--succes">Succes</button>
+          <button class="button button--secundary">Secundary</button>
+          <button class="button button--success">Success</button>
           <button class="button button--warning">Warning</button>
           <button class="button button--danger">Danger</button>
           <button class="button button--transparent">Transparent</button>
@@ -214,17 +217,64 @@
 
         <div class="editor">
           <p> 
-            <span class="code--blue">&lta</span>
+            <span class="code--blue">&ltbutton</span>
             <span class="code--red">class=</span>
-            <span class="code--orange">"button_primary"</span>
+            <span class="code--orange">"button button--primary"</span>
             <span class="code--red">href=</span>
             <span class="code--orange">"#"</span>
             <span class="code--blue">></span>
             <span>Primary</span>
-            <span class="code--blue">&lt/a></span> 
+            <span class="code--blue">&lt/button></span> 
           </p>
-          <p>
-            <span class="code--blue">.&nbsp.&nbsp.</span>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--secundary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Secundary</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--success"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Success</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--warning"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Warning</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--danger"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Danger</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--transparent"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Transparent</span>
+            <span class="code--blue">&lt/button></span> 
           </p>
         </div>
       </section>
@@ -245,8 +295,63 @@
         </div>
 
         <div class="editor">
+          <p class="code--green">&lt!-- Button Primary --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--primary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Primary</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Button With Icon --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--icon button--primary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+          </p>
           <p>
-            <span class="code--blue">.&nbsp.&nbsp.</span>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--red">src=</span>
+            <span class="code--orange">"./img/icons/white-download-icon.png"</span>
+            <span class="code--red">alt=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>With Icon</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Button Icon --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--icon button--primary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--red">src=</span>
+            <span class="code--orange">"./img/icons/white-download-icon.png"</span>
+            <span class="code--red">alt=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/button></span> 
           </p>
         </div>
       </section>
@@ -262,8 +367,40 @@
         </div>
 
         <div class="editor">
-          <p>
-            <span class="code--blue">.&nbsp.&nbsp.</span>
+          <p class="code--green">&lt!-- Normal --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--primary"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Primary</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Small --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--primary button--small"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Small</span>
+            <span class="code--blue">&lt/button></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Large --></p>
+          <p> 
+            <span class="code--blue">&ltbutton</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"button button--primary button--large"</span>
+            <span class="code--red">href=</span>
+            <span class="code--orange">"#"</span>
+            <span class="code--blue">></span>
+            <span>Large</span>
+            <span class="code--blue">&lt/button></span> 
           </p>
         </div>
       </section>
@@ -288,30 +425,98 @@
         </div>
 
         <div class="editor">
+          <p class="code--green">&lt!-- Normal --></p>
           <p> 
-            <span class="code--blue">&ltimg</span>
+            <span class="code--blue">&ltdiv</span>
             <span class="code--red">class=</span>
             <span class="code--orange">"image"</span>
-            <span class="code--red">src=</span>
-            <span class="code--orange">"https://via.placeholder.com/100"</span>
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">.&nbsp.&nbsp.</span>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>100x100</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/div></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Circle --></p>
+          <p> 
+            <span class="code--blue">&ltdiv</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"image image--circle"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>100x100</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/div></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Normal Shadow --></p>
+          <p> 
+            <span class="code--blue">&ltdiv</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"image image--shadow"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>100x100</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/div></span> 
+          </p>
+          <br>
+          <p class="code--green">&lt!-- Circle Shadow --></p>
+          <p> 
+            <span class="code--blue">&ltdiv</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"image image--circle image--shadow"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span>100x100</span>
+            <span class="code--blue">&lt/span></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/div></span> 
           </p>
         </div>
       </section>
     </section>
 
+    <!-- Blocks -->
     <section class="section">
       <h2 class="title">Blocks</h2>
 
+      <!-- Banner -->
       <section>
         <p class="subtitle">Banner</p>
 
         <section class="banner">
+            <div class="banner__hero">
+              <p class="banner__title">Full Stack Web Development</p>
+              <p class="banner__subtitle">
+                Become a better version of yourself in only 6 months.
+              </p>
+            </div>
+            
+            <button class="button button--success">Apply now</button>
           
         </section>
+
+        <div class="editor">
+          <p>
+            <span class="code--blue">.&nbsp.&nbsp.</span>
+          </p>
+        </div>
       </section>
     </section>
   </main>
