--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Component Library</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./img/logo.png" alt="">
+    <img class="header__img" src="./src/img/logo.png" alt="">
   </header>
   <main class="main">
 
